# h01_cpp_basics-DaniilBagautdinov

./: CMakeLists.txt  README.md  main.cpp
.github/classroom/: autograding.json
contrib/: CMakeLists.txt
include/: author.hpp  book.hpp  book_store.hpp
src/: author.cpp  book.cpp  book_store.cpp
tests/: CMakeLists.txt  author_tests.cpp  book_store_tests.cpp  book_tests.cpp  runner_tests.cpp
tests/samples/: author_names.txt  authors.txt  book_titles.txt
tests/samples/contents/: 1.txt  2.txt
tests/utility/: dataset_loader.hpp
